#36 Fixed problem with tree menu

--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -96,7 +96,7 @@
                             <i class="fa pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="treeview" data-ng-repeat="execution in executions"
+                            <li class="treeview execution-menu" data-ng-repeat="execution in executions"
                                 ng-class="{'active' : isExecutionNodeActive('/execution/{{execution.id}}/')}">
                                 <a href="#">
                                     <i class="fa fa-hashtag" style="font-weight: normal; font-size: 12px;"
