--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -45,7 +45,7 @@
     <nav class="navbar navbar-static-top ">
         <row>
             <div class="col-md-6" style="margin-top: 10px;">
-                <span class="jevidence-logo"><strong><span style="color: orange;">j</span><span style="color: #888888;">Evidence</span></strong></span>
+                <a href="http://www.jevidence.pl" target="_blank"><span class="jevidence-logo"><strong><span style="color: orange;">j</span><span style="color: #888888;">Evidence</span></strong></span></a>
             </div>
             <div class="col-md-3"></div>
             <div class="col-md-3"  style="margin-top: 30px; float:right;">
@@ -146,12 +146,6 @@
                 </div>
             </section>
 
-            <footer class="footer" ng-show="showFooter">
-                <center>
-                    <a href="#" class="close" ng-click="closeFooter();">&times;</a>
-                    <div class="copyright"><a href="http://stypka.pl" target="_blank">Copyright © 2016 Łukasz Stypka</a></div>
-                </center>
-            </footer>
         </aside>
 
     </div>
@@ -276,13 +270,61 @@
                         <div class="panel-body in" id="testsTrendChartDataDashboardDiv" ng-controller="TestsTrendStatusChartCtrl">
                             <div class="col-md-12">
                                 <div style="border: 1px solid #eee;">
-                                    <div id="testsTrendDashboardChart" style="min-height: 350px;"></div>
+                                    <div id="testsTrendDashboardChart" style="min-height: 250px;"></div>
                                 </div>
                             </div>
                         </div>
                     </section>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <section class="panel">
+                        <header class="panel-heading accordion-toggle" data-toggle="collapse"
+                                data-target="#lastExecutionDashboardDiv" style="cursor: pointer;">
+                            <strong>Execution {{lastExecutionId}} - tests result</strong>
+
+                            <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
+                        </header>
+                        <div class="panel-body in" id="lastExecutionDashboardDiv">
+                            <div class="col-md-12">
+                                <div class="panel-body table-responsive">
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Test</th>
+                                                <th>Duration</th>
+                                                <th>Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="test in lastExecutionSet track by $index">
+                                                <td>{{$index+1}}</td>
+                                                <td>
+                                                    <a ng-href="#/execution/{{selectedRevisions.firstCorrect}}/result?testname={{test.name}}&params={{stringify(test.params)}}">{{test.name}}</a>
+                                                </td>
+                                                <td>{{test.duration | timeDurationFilter}}</td>
+                                                <td>
+                                                    <span class="label label-block"
+                                                          ng-class="{'label-test-success' : test.status === 'SUCCESS',
+                                                        'label-test-failed' : test.status === 'FAILED',
+                                                        'label-test-error' : test.status === 'ERROR',
+                                                        'label-test-skipped' : test.status === 'SKIPPED'}">
+                                                        {{test.status}}
+                                                     </span>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-md-12">
                     <section class="panel">
@@ -1360,31 +1402,6 @@
 </script>
 
 <script src="data/settings.js" type="text/javascript"></script>
-
-<script src="data/records" type="text/javascript"></script>
-
-
-<script src="data/2016_06_17_17_38_08/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_17_17_38_18/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_17_17_38_27/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_14_05_31/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_14_05_40/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_15_14_41/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_15_14_48/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_15_14_55/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_15_15_05/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_15_15_13/execution.js" type="text/javascript"></script>
-
-<script src="data/2016_06_18_15_15_29/execution.js" type="text/javascript"></script>
 
 </body>
 </html>
