--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -246,6 +246,7 @@
 <script src="js/angular/directive/TestResultTable.js" type="text/javascript"></script>
 <script src="js/angular/directive/MenuDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/DynamicContentDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/CalendarDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
@@ -621,19 +622,7 @@
 
 <!-- Calendar content-->
 <script type="text/ng-template" id="view/calendar.html">
-    <div data-ng-controller="CalendarCtrl" >
-        <div class="col-md-12">
-            <section class="panel">
-                <header class="panel-heading accordion-toggle" data-toggle="collapse" data-target="#calendarContainer" style="cursor: pointer;">
-                    <span style="font-weight: bold;">Calendar of executions</span>
-                    <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
-                </header>
-                <div class="panel-body in" id="calendarContainer">
-                    <div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources"></div>
-                </div>
-            </section>
-        </div>
-    </div>
+  <calendar-directive></calendar-directive>
 </script>
 
 <!-- Execution overview content-->
