--- a/jevidence-example-testng/jevidence/index.html
+++ b/jevidence-example-testng/jevidence/index.html
@@ -50,7 +50,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-3"  style="margin-top: 30px; float:right;">
                 <span class="jevidence-version" style="float: right;">version 1.2</span>
-                <span class="jevidence-deploy-time"  style="float: right; margin-right: 20px;">JEVIDENCE_TIMESTAMP</span>
+                <span class="jevidence-deploy-time"  style="float: right; margin-right: 20px;">2016-08-08 20:16:42</span>
             </div>
         </row>
     </nav>
@@ -61,11 +61,11 @@
         <aside class="left-side sidebar-offcanvas"
                style="position: absolute; margin-top: 50px; width: 160px; background-color: #f9fafc; bottom: 0px; height: 100%;"
                data-ng-controller="MenuCtrl">
-
-
             <section class="sidebar">
-                <menu-directive></menu-directive>
                 <ul class="sidebar-menu">
+                    <li class="divider"></li>
+                    <li class="divider"></li>
+                    <li class="divider"></li>
                     <li ng-class="{'active' : isNodeActive('/dashboard')}">
                         <a href="#/dashboard">
                             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
@@ -81,6 +81,12 @@
                     <li ng-class="{'active' : isNodeActive('/performance')}">
                         <a href="#/performance">
                             <i class="fa fa-line-chart"></i> <span>Performance</span>
+                        </a>
+                    </li>
+                    <li class="divider"></li>
+                    <li ng-class="{'active' : isNodeActive('/calendar')}">
+                        <a href="#/calendar">
+                            <i class="fa fa-calendar"></i> <span>Calendar</span>
                         </a>
                     </li>
                     <li class="divider"></li>
@@ -238,17 +244,8 @@
 <script src="js/angular/controller/TestsAvgTimeTrendPerformanceChartCtrl.js" type="text/javascript"></script>
 
 <script src="js/angular/directive/TestResultTable.js" type="text/javascript"></script>
-<script src="js/angular/directive/MenuDirective.js" type="text/javascript"></script>
-<script src="js/angular/directive/DynamicContentDirective.js" type="text/javascript"></script>
-<script src="js/angular/directive/CalendarWidgetDirective.js" type="text/javascript"></script>
-<script src="js/angular/directive/EmptyWidgetDirective.js" type="text/javascript"></script>
-<script src="js/angular/directive/TestsTrendChartWidgetDirective.js" type="text/javascript"></script>
-<script src="js/angular/directive/TestsResultListWidgetDirective.js" type="text/javascript"></script>
 
-<!-- Dynamic content -->
-<script type="text/ng-template" id="view/dynamic-content.html">
-    <dynamic-content-directive/>
-</script>
+
 
 <!-- Dashboard content-->
 <script type="text/ng-template" id="view/dashboard.html">
@@ -619,7 +616,19 @@
 
 <!-- Calendar content-->
 <script type="text/ng-template" id="view/calendar.html">
-  <calendar-directive></calendar-directive>
+    <div data-ng-controller="CalendarCtrl" >
+        <div class="col-md-12">
+            <section class="panel">
+                <header class="panel-heading accordion-toggle" data-toggle="collapse" data-target="#calendarContainer" style="cursor: pointer;">
+                    <span style="font-weight: bold;">Calendar of executions</span>
+                    <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
+                </header>
+                <div class="panel-body in" id="calendarContainer">
+                    <div ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources"></div>
+                </div>
+            </section>
+        </div>
+    </div>
 </script>
 
 <!-- Execution overview content-->
@@ -1206,8 +1215,8 @@
 
                             <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
                         </header>
-                        <div class="panel-body in" id="testsTrendChartDataDiv" >
-                            <div class="col-md-12" ng-controller="TestsTrendStatusChartCtrl">
+                        <div class="panel-body in" id="testsTrendChartDataDiv" ng-controller="TestsTrendStatusChartCtrl">
+                            <div class="col-md-12">
                                 <div style="border: 1px solid #eee;">
                                     <div id="testsTrendDashboardChart" style="min-height: 350px;"></div>
                                 </div>
@@ -1393,7 +1402,6 @@
 </script>
 
 <script src="data/settings.js" type="text/javascript"></script>
-<script src="data/config.js" type="text/javascript"></script>
 
 <script src="data/records" type="text/javascript"></script>
 
@@ -1402,5 +1410,6 @@
 <script src="data/2016_08_08_20_16_50/execution.js" type="text/javascript"></script>
 
 <script src="data/2016_08_08_20_16_58/execution.js" type="text/javascript"></script>
+
 </body>
 </html>
