--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -215,6 +215,7 @@
 <script src="js/angular/service/SettingsService.js" type="text/javascript"></script>
 <script src="js/angular/service/S2RevisionsService.js" type="text/javascript"></script>
 <script src="js/angular/service/S2StatusService.js" type="text/javascript"></script>
+<script src="js/angular/service/RendererService.js" type="text/javascript"></script>
 
 <script src="js/angular/filter/TimeDurationFilter.js" type="text/javascript"></script>
 <script src="js/angular/filter/TestStatusFilter.js" type="text/javascript"></script>
@@ -244,6 +245,7 @@
 <script src="js/angular/directive/EmptyWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/TestsTrendChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/TestsResultListWidgetDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/TestsResultComparatorWidgetDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
@@ -260,73 +262,6 @@
                 <strong>Warning!</strong> No tests executions
             </div>
         </div>
-        <div ng-if="!noRecords">
-            <div class="row">
-                <div class="col-md-12">
-                    <section class="panel">
-                        <header class="panel-heading accordion-toggle" data-toggle="collapse"
-                                data-target="#testsTrendChartDataDashboardDiv" style="cursor: pointer;">
-                            <strong>Tests trend - Last {{numberOfExecutions}} executions</strong>
-
-                            <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
-                        </header>
-                        <div class="panel-body in" id="testsTrendChartDataDashboardDiv" ng-controller="TestsTrendStatusChartCtrl">
-                            <div class="col-md-12">
-                                <div style="border: 1px solid #eee;">
-                                    <div id="testsTrendDashboardChart" style="min-height: 250px;"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <section class="panel">
-                        <header class="panel-heading accordion-toggle" data-toggle="collapse"
-                                data-target="#lastExecutionDashboardDiv" style="cursor: pointer;">
-                            <strong>Execution {{lastExecutionId}} - tests result</strong>
-
-                            <div class="pull-right" title="Minimalize"><i class="fa container-collapse"></i></div>
-                        </header>
-                        <div class="panel-body in" id="lastExecutionDashboardDiv">
-                            <div class="col-md-12">
-                                <div class="panel-body table-responsive">
-                                    <table class="table table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>#</th>
-                                                <th>Test</th>
-                                                <th>Duration</th>
-                                                <th>Status</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr ng-repeat="test in lastExecutionSet track by $index">
-                                                <td>{{$index+1}}</td>
-                                                <td>
-                                                    <a ng-href="#/execution/{{selectedRevisions.firstCorrect}}/result?testname={{test.name}}&params={{stringify(test.params)}}">{{test.name}}</a>
-                                                </td>
-                                                <td>{{test.duration | timeDurationFilter}}</td>
-                                                <td>
-                                                    <span class="label label-block"
-                                                          ng-class="{'label-test-success' : test.status === 'SUCCESS',
-                                                        'label-test-failed' : test.status === 'FAILED',
-                                                        'label-test-error' : test.status === 'ERROR',
-                                                        'label-test-skipped' : test.status === 'SKIPPED'}">
-                                                        {{test.status}}
-                                                     </span>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
 
             <div class="row">
                 <div class="col-md-12">
