#42 Created testsResultComparator widget

--- a/jevidence-example-testng/jevidence/index.html
+++ b/jevidence-example-testng/jevidence/index.html
@@ -1411,5 +1411,7 @@
 
 <script src="data/2016_08_08_20_16_58/execution.js" type="text/javascript"></script>
 
+<script src="data/2016_08_10_18_06_11/execution.js" type="text/javascript"></script>
+
 </body>
 </html>
