--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -239,6 +239,7 @@
 <script src="js/angular/directive/TestsTrendChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/TestsResultListWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/TestsResultComparatorWidgetDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/ExecutionsPerformanceChartWidgetDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
