#56 Created executionAvgExecutionTimeChart widget

--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -241,6 +241,7 @@
 <script src="js/angular/directive/TestsAvgDurationChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionResultInPercentageChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionAvgNumberOfStepsChartWidgetDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/ExecutionAvgTimeChartWidgetDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
