--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -245,6 +245,7 @@
 <script src="js/angular/directive/ExecutionAvgNumberOfStepsChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionAvgTimeChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionStatisticsTableWidgetDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/ExecutionEnvironmentVariablesTableWidgetDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
