#51 Created executionParamsTable widget

--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -246,6 +246,7 @@
 <script src="js/angular/directive/ExecutionAvgTimeChartWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionStatisticsTableWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionEnvironmentVariablesTableWidgetDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/ExecutionParamsTableWidgetDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
