#57 Created executionDefectsTable widget

--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -247,6 +247,7 @@
 <script src="js/angular/directive/ExecutionStatisticsTableWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionEnvironmentVariablesTableWidgetDirective.js" type="text/javascript"></script>
 <script src="js/angular/directive/ExecutionParamsTableWidgetDirective.js" type="text/javascript"></script>
+<script src="js/angular/directive/ExecutionDefectsTableWidgetDirective.js" type="text/javascript"></script>
 
 <!-- Dynamic content -->
 <script type="text/ng-template" id="view/dynamic-content.html">
@@ -1061,6 +1062,8 @@
 
 <script src="data/2016_08_08_20_16_58/execution.js" type="text/javascript"></script>
 <script src="data/2016_08_10_18_06_11/execution.js" type="text/javascript"></script>
+<script src="data/2016_08_14_20_11_23/execution.js" type="text/javascript"></script>
+<script src="data/2016_08_14_21_24_14/execution.js" type="text/javascript"></script>
 
 
 </body>
