--- a/jevidence-example-testng/jevidence/index.html
+++ b/jevidence-example-testng/jevidence/index.html
@@ -1413,5 +1413,9 @@
 
 <script src="data/2016_08_10_18_06_11/execution.js" type="text/javascript"></script>
 
+<script src="data/2016_08_14_20_11_23/execution.js" type="text/javascript"></script>
+
+<script src="data/2016_08_14_21_24_14/execution.js" type="text/javascript"></script>
+
 </body>
 </html>
