--- a/jevidence-client/index.html
+++ b/jevidence-client/index.html
@@ -47,14 +47,33 @@
             <div class="col-md-6" style="margin-top: 10px;">
                 <a href="http://www.jevidence.pl" target="_blank"><span class="jevidence-logo"><strong><span style="color: orange;">j</span><span style="color: #888888;">Evidence</span></strong></span></a>
             </div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3"  style="margin-top: 30px; float:right;">
-                <span class="jevidence-version" style="float: right;">version 2.0</span>
-                <span class="jevidence-deploy-time"  style="float: right; margin-right: 20px;">JEVIDENCE_TIMESTAMP</span>
+            <div class="col-md-3" ></div>
+            <div class="col-md-3"  style="margin-top: 30px; float: right;">
+                <span class="jevidence-version" style="margin-right: 20px;">version 2.0</span>
+                <span class="jevidence-deploy-time"  style="margin-right: 20px;">JEVIDENCE_TIMESTAMP</span>
+                <i class="fa fa-cog jevidence-setting" data-toggle="modal" data-target=".bs-example-modal-sm"></i>
             </div>
         </row>
     </nav>
 </header>
+
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="settingModal" data-ng-controller="SettingCtrl">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <h3 for="comment">Configuration:</h3>
+                <div class="form-group">
+                    <textarea class="form-control" rows="15" id="config" ng-model="config"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" ng-click="loadDefault()">Load default</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="save()">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div ng-if="errorStatus === 0">
     <div class="wrapper row-offcanvas row-offcanvas-left">
@@ -156,11 +175,11 @@
 <script src="js/angular/config/ApplicationConfig.js" type="text/javascript"></script>
 <script src="js/angular/util/ApplicationUtils.js" type="text/javascript"></script>
 
+<script src="js/angular/service/SettingsService.js" type="text/javascript"></script>
 <script src="js/angular/service/RecordsService.js" type="text/javascript"></script>
 <script src="js/angular/service/ExecutionService.js" type="text/javascript"></script>
 <script src="js/angular/service/StatisticsService.js" type="text/javascript"></script>
 <script src="js/angular/service/DefectsService.js" type="text/javascript"></script>
-<script src="js/angular/service/SettingsService.js" type="text/javascript"></script>
 <script src="js/angular/service/S2RevisionsService.js" type="text/javascript"></script>
 <script src="js/angular/service/S2StatusService.js" type="text/javascript"></script>
 <script src="js/angular/service/RendererService.js" type="text/javascript"></script>
@@ -170,6 +189,7 @@
 <script src="js/angular/filter/TestTextFilter.js" type="text/javascript"></script>
 
 <script src="js/angular/controller/RootCtrl.js" type="text/javascript"></script>
+<script src="js/angular/controller/SettingCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/ImagePreviewCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/ExecutionResultCtrl.js" type="text/javascript"></script>
 <script src="js/angular/controller/ExecutionDefectsCtrl.js" type="text/javascript"></script>
